[gd_scene format=3 uid="uid://brwbenkgu3xps"]

[ext_resource type="Script" uid="uid://co2mbqfl8vtah" path="res://scripts/app/main.gd" id="1_s4jlwm"]
[ext_resource type="Script" uid="uid://dx5g2blt5n8v4" path="res://management_ui.gd" id="2_l3xfh"]

[node name="Main" type="Node" unique_id=1296529443]
script = ExtResource("1_s4jlwm")

[node name="ManagementUI" type="Control" parent="." unique_id=2139314238]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_l3xfh")

[node name="VBoxContainer" type="VBoxContainer" parent="ManagementUI" unique_id=2131896895]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TopBar" type="HBoxContainer" parent="ManagementUI/VBoxContainer" unique_id=1599140515]
layout_mode = 2

[node name="DayLabel" type="Label" parent="ManagementUI/VBoxContainer/TopBar" unique_id=794202968]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="ManagementUI/VBoxContainer/TopBar" unique_id=567907514]
layout_mode = 2

[node name="MainPanel" type="HBoxContainer" parent="ManagementUI/VBoxContainer" unique_id=35178039]
layout_mode = 2

[node name="GladiatorList" type="ItemList" parent="ManagementUI/VBoxContainer/MainPanel" unique_id=8714294]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="ManagementUI/VBoxContainer/MainPanel" unique_id=1237587122]
layout_mode = 2
